name: unions
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
license-file: ""
description:
data-dir: ""

library
    build-depends: base -any, containers -any, doctest -any,
                   ghc-prim -any, vector -any
    exposed-modules: Unions
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src

test-suite test-unions
    build-depends: base -any, containers -any, doctest -any,
                   ghc-prim -any, vector -any, unions -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: test

